@@ -965,6 +965,92 @@ expr_stmt|;
 block|}
 if|else if
 condition|(
+literal|"property"
+operator|.
+name|equals
+argument_list|(
+name|qName
+argument_list|)
+condition|)
+block|{
+name|String
+name|name
+init|=
+name|_ivy
+operator|.
+name|substitute
+argument_list|(
+operator|(
+name|String
+operator|)
+name|attributes
+operator|.
+name|get
+argument_list|(
+literal|"name"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|String
+name|value
+init|=
+name|_ivy
+operator|.
+name|substitute
+argument_list|(
+operator|(
+name|String
+operator|)
+name|attributes
+operator|.
+name|get
+argument_list|(
+literal|"value"
+argument_list|)
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|name
+operator|==
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"missing attribute name on property tag"
+argument_list|)
+throw|;
+block|}
+if|if
+condition|(
+name|value
+operator|==
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"missing attribute value on property tag"
+argument_list|)
+throw|;
+block|}
+name|_ivy
+operator|.
+name|setVariable
+argument_list|(
+name|name
+argument_list|,
+name|value
+argument_list|)
+expr_stmt|;
+block|}
+if|else if
+condition|(
 literal|"properties"
 operator|.
 name|equals
