@@ -441,6 +441,34 @@ argument_list|)
 expr_stmt|;
 name|assertEquals
 argument_list|(
+literal|1
+argument_list|,
+name|fsInt1
+operator|.
+name|getIvyPatterns
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"sharedrep/[organisation]/[module]/ivys/ivy-[revision].xml"
+argument_list|,
+name|fsInt1
+operator|.
+name|getIvyPatterns
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
 literal|"int2"
 argument_list|,
 operator|(
